--- a/docs/src/pages/index.astro
+++ b/docs/src/pages/index.astro
@@ -233,7 +233,10 @@ const structuredData = {
             >Frequently Asked Questions (FAQ)</a
           >
         </li>
-        <li><a href={githubURL}>GitHub Repository</a></li>
+        <li>
+          <a href={githubURL} target="_blank" rel="noopener noreferrer"
+            >GitHub Repository</a>
+        </li>
       </ul>
     </nav>
   </main>
