--- a/docs/src/pages/install.astro
+++ b/docs/src/pages/install.astro
@@ -31,8 +31,8 @@ const tagName = release.tag_name;
       <li>
         Extract the <code>obs-plugins</code> and <code>data</code> folders from the
         zip file.<br />
-        Drag and drop the <code>obs-plugins</code> and <code>data</code> folders
-        from the zip file into your OBS Studio installation directory (<code
+        Drag and drop the <code>obs-plugins</code> and <code>data</code> folders from
+        the zip file into your OBS Studio installation directory (<code
           >C:\Program Files\obs-studio</code
         >), and choose to overwrite when prompted.
       </li>
@@ -116,8 +116,8 @@ const tagName = release.tag_name;
     <p>
       For Arch Linux, we provide an <strong>unofficial PKGBUILD</strong> in the repository.<br
       />
-      You can install this plugin by building with <code>makepkg</code> or using
-      an AUR helper like <code>yay</code>.<br />
+      You can install this plugin by building with <code>makepkg</code> or using an
+      AUR helper like <code>yay</code>.<br />
       For detailed instructions, see:<br />
       <a href={joinURL(githubURL, "tree/main/unsupported/arch/#readme")}
         >Arch Linux packaging documentation</a
@@ -126,8 +126,8 @@ const tagName = release.tag_name;
 
     <h2>Flatpak</h2>
     <p>
-      For Flatpak, we provide an <strong>unofficial build definition</strong> in
-      the repository.<br />
+      For Flatpak, we provide an <strong>unofficial build definition</strong> in the
+      repository.<br />
       Users can build and install this plugin using <code>flatpak-builder</code
       >.<br />
       For detailed instructions, see:<br />
